--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@react-pdf/renderer": "^3.4.4",
     "@visx/visx": "^2.18.0",
     "next": "14.2.5",
     "react": "^18",
