--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "^2.1.5",
     "@react-pdf/renderer": "^3.4.4",
     "@visx/visx": "^2.18.0",
+    "html2pdf.js": "^0.10.2",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
