--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@visx/visx": "^2.18.0",
     "html2pdf.js": "^0.10.2",
     "jotai": "^2.9.2",
+    "jotai-devtools": "^0.10.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
