https로 데브에서 사용할수 있게 변경

--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "trainer-report-storage",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node server.js",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "build": "next build",
+    "export": "next export"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
