--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.16.7",
     "@react-pdf/renderer": "^3.4.4",
+    "@visx/responsive": "^3.10.2",
     "@visx/visx": "^2.18.0",
     "html2pdf.js": "^0.10.2",
     "jotai": "^2.9.2",
